--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -42,7 +42,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
         # FTP server name (you may need to specify a port)
-        FTP_SERVER: www.florianhofer.it
+        FTP_SERVER: ftp.florianhofer.it
         # FTP account username
         FTP_USERNAME: ${{ secrets.WWW_FTPU }}
         # FTP account password
